@@ -1,6 +1,7 @@
 package org.egov.project.validator.resource;
 
 import lombok.extern.slf4j.Slf4j;
+import org.egov.common.exception.InvalidTenantIdException;
 import org.egov.common.models.Error;
 import org.egov.common.models.project.ProjectResource;
 import org.egov.common.models.project.ProjectResourceBulkRequest;
@@ -21,8 +22,10 @@ import static org.egov.common.utils.CommonUtils.getIdFieldName;
 import static org.egov.common.utils.CommonUtils.getIdToObjMap;
 import static org.egov.common.utils.CommonUtils.getMethod;
 import static org.egov.common.utils.CommonUtils.getObjClass;
+import static org.egov.common.utils.CommonUtils.getTenantId;
 import static org.egov.common.utils.CommonUtils.notHavingErrors;
 import static org.egov.common.utils.CommonUtils.populateErrorDetails;
+import static org.egov.common.utils.ValidatorUtils.getErrorForInvalidTenantId;
 import static org.egov.common.utils.ValidatorUtils.getErrorForNonExistentRelatedEntity;
 
 @Component
@@ -43,19 +46,28 @@ public class PrProjectIdValidator implements Validator<ProjectResourceBulkReques
         List<ProjectResource> entities = request.getProjectResource();
         Class<?> objClass = getObjClass(entities);
         Method idMethod = getMethod("getProjectId", objClass);
+        String tenantId = getTenantId(entities);
         Map<String, ProjectResource> eMap = getIdToObjMap(entities
                 .stream().filter(notHavingErrors()).collect(Collectors.toList()), idMethod);
         if (!eMap.isEmpty()) {
             List<String> entityIds = new ArrayList<>(eMap.keySet());
-            List<String> existingProjectIds = projectRepository.validateIds(entityIds,
-                    getIdFieldName(idMethod));
-            List<ProjectResource> invalidEntities = entities.stream().filter(notHavingErrors()).filter(entity ->
-                            !existingProjectIds.contains(entity.getProjectId()))
-                    .collect(Collectors.toList());
-            invalidEntities.forEach(projectResource -> {
-                Error error = getErrorForNonExistentRelatedEntity(projectResource.getProjectId());
-                populateErrorDetails(projectResource, error, errorDetailsMap);
-            });
+            try {
+                List<String> existingProjectIds = projectRepository.validateIds(tenantId, entityIds,
+                        getIdFieldName(idMethod));
+                List<ProjectResource> invalidEntities = entities.stream().filter(notHavingErrors()).filter(entity ->
+                                !existingProjectIds.contains(entity.getProjectId()))
+                        .toList();
+                invalidEntities.forEach(projectResource -> {
+                    Error error = getErrorForNonExistentRelatedEntity(projectResource.getProjectId());
+                    populateErrorDetails(projectResource, error, errorDetailsMap);
+                });
+            } catch (InvalidTenantIdException exception) {
+                // Populating InvalidTenantIdException for all entities
+                entities.forEach(projectResource -> {
+                    Error error = getErrorForInvalidTenantId(tenantId, exception);
+                    populateErrorDetails(projectResource, error, errorDetailsMap);
+                });
+            }
         }
         return errorDetailsMap;
     }
